# rxnrater

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy_release.yaml
rxnrater/: __init__.py  _utils.py  enzyme_rxn.py  micro_rxn.py
tests/: test_enzyme_rxn.py  test_micro_rxn.py
